--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="http://iconsetc.com/icons-watermarks/flat-circle-white-on-black/alphanum/alphanum_lowercase-letter-m/alphanum_lowercase-letter-m_flat-circle-white-on-black_512x512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
